--- a/src/styles/travel.scss
+++ b/src/styles/travel.scss
@@ -70,7 +70,7 @@ header {
   }
 }
 
-form {
+.travel-form {
   width: 100%;
   padding: 32px 18px;
   background: rgba(255, 255, 255, 0.86);
@@ -673,15 +673,15 @@ form {
 }
 
 @media (max-width: 480px) {
-  form {
+  .travel-form {
     padding: 16px 5px;
   }
 
-  form h1 {
+  .travel-form h1 {
     font-size: 18px;
   }
 
-  form button {
+  .travel-form button {
     width: 100%;
     font-size: 1rem;
   }
