--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -56,6 +56,28 @@
     box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.modal-cart {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-cart-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 10px;
+}
+
 #checkout-all {
     background: #28a745;
     color: #fff;
