--- a/src/styles/productDetail.scss
+++ b/src/styles/productDetail.scss
@@ -192,6 +192,28 @@
   color: black;
 }
 
+.modal-detail {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-detail-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  border-radius: 10px;
+}
+
 .buy-now-form label {
   display: block;
   margin: 10px 0 5px;
